# Editor

./: CMakeLists.txt
assets/saves/: example_1.txt
src/: main.cpp
src/screens/: app_state.h  screen.h  screen_manager.cpp  screen_manager.h
src/screens/editor/: editor_screen.cpp  editor_screen.h  editor_state.h
src/screens/splashscreen/: splash_screen.cpp  splash_screen.h
src/utils/: asset_loader.cpp  r.h
ui/src/: button.cpp  button.h  gui.cpp  gui.h  radio_buttons.cpp  radio_buttons.h
